unpackaged/main/default/objects/Actions_1st_Quarter__c/Actions_1st_Quarter__c.object-meta.xml
<CustomObject>
    <label>Action 1st Quarter</label>
    <nameField>
        <displayFormat>A1-{00000}</displayFormat>
        <label>Action 1st Quarter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actions 1st Quarter</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>