unpackaged/main/default/objects/Actions_1st_Quarter__c/fields/Action_Details__c.field-meta.xml
<CustomField>
    <fullName>Action_Details__c</fullName>
    <label>Action Details</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>