unpackaged/main/default/objects/Actions_1st_Quarter__c/fields/Change_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Change_Quarter__c</fullName>
    <label>Change Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarter 2</fullName>
            </value>
            <value>
                <fullName>Quarter 3</fullName>
            </value>
            <value>
                <fullName>Quarter 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>