unpackaged/main/default/objects/Actions_1st_Quarter__c/fields/Current_State__c.field-meta.xml
<CustomField>
    <fullName>Current_State__c</fullName>
    <formula>IF(AND(Due_Date__c &lt; TODAY(), OR(TEXT(Status__c) = &quot;Not Started&quot;, TEXT(Status__c) = &quot;In Progress&quot;)), &quot;Past Due&quot;,
IF(AND(Due_Date__c &gt; TODAY(), Due_Date__c &lt; TODAY() + 30, OR(TEXT(Status__c) = &quot;Not Started&quot;, TEXT(Status__c) = &quot;In Progress&quot;)),&quot;Upcoming&quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current State</label>
    <type>Text</type>
</CustomField>