unpackaged/main/default/objects/Actions_1st_Quarter__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the owner of the Plan This Quarter.</inlineHelpText>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Plans_This_Quarter</relationshipName>
    <type>Lookup</type>
</CustomField>