unpackaged/main/default/objects/Actions_1st_Quarter__c/fields/Select_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Select_Quarter__c</fullName>
    <label>Select Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Quarter</fullName>
            </value>
            <value>
                <fullName>2nd Quarter</fullName>
            </value>
            <value>
                <fullName>3rd Quarter</fullName>
            </value>
            <value>
                <fullName>4th Quarter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>