unpackaged/main/default/objects/Actions_1st_Quarter__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <color>#E27001</color>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <color>#F3D904</color>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <color>#57F17C</color>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <color>#AFCADF</color>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Postponed</fullName>
                <color>#B6E32E</color>
                <label>Postponed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>