unpackaged/main/default/objects/Actions_1st_Quarter__c/fields/Successor_Action_2nd_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Successor_Action_2nd_Quarter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Successor Action 2nd Quarter</label>
    <referenceTo>Action_2nd_Quarter__c</referenceTo>
    <relationshipLabel>Actions 1st Quarter</relationshipLabel>
    <relationshipName>Actions_1st_Quarter</relationshipName>
    <type>Lookup</type>
</CustomField>