unpackaged/main/default/objects/Actions_1st_Quarter__c/recordTypes/Action_1st_Quarter_New.recordType-meta.xml
<RecordType>
    <fullName>Action_1st_Quarter_New</fullName>
    <active>true</active>
    <label>Action 1st Quarter New</label>
</RecordType>