unpackaged/main/default/objects/Actions_1st_Quarter__c/listViews/My_Actions_1st_Quarter.listView-meta.xml
<ListView>
    <fullName>My_Actions_1st_Quarter</fullName>
    <columns>Action__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Merchant_Account_Plan__c</columns>
    <columns>Owner__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Past_Due__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Actions 1st Quarter</label>
</ListView>